# KVM

./: .gitignore  CMakeLists.txt  devdoc
linux/: build_cmake.sh
src/: bin.cpp  bin.h  binops.cpp  binops.h  exe.cpp  exe.h  executable.h  main.cpp
src/arch/: amd64.cpp  arch.h
src/arch/amd64/: amd64.cpp  amd64.h
src/executable/: bin.cpp  bin.h  binops.cpp  binops.h  executable.h
src/fformat/: elf.cpp  elf64.cpp  fformat.h
src/fformat/elf32/: elf32.h
src/fformat/elf64/: elf64.cpp  elf64.h
src/file/: file.h
src/file/elf32/: elf32.h
src/file/elf64/: elf64.cpp  elf64.h
src/isa/: isa.h
src/isa/amd64/: amd64.cpp  amd64.h  instructions.cpp
src/log/: log.cpp  log.h
src/memory/: memoryregion.cpp  memoryregion.h
src/runtime/: engine.cpp  engine.h
src/sys/: sys.h  unix.cpp
src/sys/unix/: unix.cpp  unix.h
src/util/: bits.h
test/a/: main.c  run  run_objdump.s
test/asm/: build.sh  dump.s  main.s  run
test/b/: main.c  run  run_objdump.s
windows/: build_cmake.bat
